tests/expression/function_wrong_params.sy
start :: fn do
    f : fn -> int = fn a: int -> int do 1 end
end
// error: $WrongArity {..}
